deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webdep
  namespace: devns
  labels:
    app: web
spec:
  selector:
    matchLabels:
      app: web
  replicas: 1
  template:
    metadata:
      name: webtmp
      labels:
        app: web
    spec:
      containers:
      - image: sajinibm/mar15:webv1
        imagePullPolicy: Always
        name: webcon
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          requests:
            memory: "100Mi"
            cpu: "100m"
          limits:
            memory: "200Mi"
            cpu: "200m"
