pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: testpod
  namespace: devns
  labels:
    app: web
spec:
  containers:
  - image: sajinibm/mar15:webv1
    imagePullPolicy: Always
    name: webcon
    ports:
    - containerPort: 80
    resources:
      requests:
        memory: "200Mi"
        cpu: "200m"
      limits:
        memory: "400Mi"
        cpu: "400m"

---

apiVersion: v1
kind: Service
metadata:
  name: lbsvc
  namespace: devns
spec:
  type: LoadBalancer
  selector:
    app: web
  ports:
  - port: 80
    targetPort: 80
    name: javaport
