service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeportservice
  namespace: devns
spec:
  type: NodePort
  selector:
    app: web
  ports:
  - nodePort: 30001
    port: 80
    targetPort: 80
    name: javaport
