ingress_service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webingress
  namespace: devns
spec:
  rules:
  - host: "www.devsession.tk"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: websvc
            port:
              number: 80
